--- a/hex.html
+++ b/hex.html
@@ -18,10 +18,10 @@
           <h4 class="logo">color<span class="swap-style">Swap</span></h4>
           <ul class="nav-links">
             <li>
-              <a class="active" href="./index.html">Simple</a>
+              <a href="./index.html">Simple</a>
             </li>
             <li>
-              <a href="./hex.html">Hex</a>
+              <a class="active" href="./hex.html">Hex</a>
             </li>
           </ul>
         </div>
@@ -82,6 +82,6 @@
       </footer>
     </div>
     <!-- link for index page javascript -->
-    <script src="./index.js"></script>
+    <script src="./hex.js"></script>
   </body>
 </html>
